--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ mime = {version = "0.3.16", optional = true}
 multipart = {version = "0.18.0", default-features = false, features = ["client"], optional = true}
 native-tls = {version = "0.2.10", optional = true}
 rustls-native-certs = {version = "0.7", optional = true}
-rustls-opt-dep = {package = "rustls", version = "0.23.0", default-features = false, optional = true}
+rustls-opt-dep = {package = "rustls", version = "0.23.0", default-features = false, features = ["ring", "std"], optional = true}
 serde = {version = "1.0.143", optional = true}
 serde_json = {version = "1.0.83", optional = true}
 serde_urlencoded = {version = "0.7.1", optional = true}
@@ -68,7 +68,7 @@ rustls = ["tls-rustls-webpki-roots"]
 tls-rustls = ["tls-rustls-webpki-roots"]
 tls-vendored = ["tls-native-vendored"]
 # Internal feature used to indicate rustls support
-__rustls = ["rustls-opt-dep", "rustls-opt-dep/ring"]
+__rustls = ["rustls-opt-dep"]
 
 [package.metadata.docs.rs]
 all-features = true
